# docx-parser

./: Cargo.toml  README.md  convert_to_markdown.sh  example.docx
.github/workflows/: publish.yml  test.yml
src/: lib.rs  main.rs  utils.rs
test/: block_quotes.md  codeblock.md  comments.md  custom_style_no_reference.md  custom_style_preserve.md  custom_style_reference.md  definition_list.md  document-properties-short-desc.md  document-properties.md  headers.md  image.md  inline_code.md  inline_formatting.md  inline_images.md  link_in_notes.md  links.md  lists.md  lists_continuing.md  lists_div_bullets.md  lists_multiple_initial.md  lists_restarting.md  nested_anchors_in_header.md  notes.md  raw-blocks.md  raw-bookmarks.md  table_one_row.md  table_with_list_cell.md  tables.md  tables_separated_with_rawblock.md  track_changes_deletion.md  track_changes_insertion.md  track_changes_move.md  track_changes_scrubbed_metadata.md  unicode.md  verbatim_subsuper.md
